fix: Enhance Kafka producer initialization to prevent app crashes and improve CA handling